nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__stress_cancelled.snap
---
source: nextest-runner/src/record/display.rs
expression: "runs[4].display_detailed(&index, &replayable, &Styles::default(),\n&theme_characters, &redactor).to_string()"
snapshot_kind: text
---
Run 550e8400-e29b-41d4-a716-446655440012

  nextest version:  0.9.122
  status:           stress cancelled (exit code 0)
  started at:       2024-06-25 12:00:00 +00:00
  last written at:  2024-06-25 12:00:00 +00:00
  duration:         12.345s
  replayable:       yes

  iterations:
    passed:         50
    failed:         10
    not run:        40

  sizes:            compressed  uncompressed  entries
    log                   1 KB          4 KB      100
    store                50 KB        200 KB       42
                    ----------  ------------  -------
    total                51 KB        204 KB      142
