nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__tree_continuation_flags.snap
---
source: nextest-runner/src/record/display.rs
expression: "DisplayRunList::new(&snapshot_with_replayability, None, &Styles::default(),\n&theme_characters, &Redactor::noop()).to_string()"
---
4 recorded runs:

  50000001    2024-06-15 10:00:00      1.000s      50 KB  10 passed
  |-50000002  2024-06-15 13:00:00      1.000s      60 KB   8 passed
  | 50000003  2024-06-15 14:00:00      1.000s      70 KB   5 passed  *latest
  \-50000004  2024-06-15 11:00:00      1.000s      80 KB   3 passed
                                               ---------
                                                  260 KB
